feat: 支持讲述消息与多张照片
